// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-toggle-button-group component snapshot tests should render and update disabled 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" class="ic-toggle-button-group-disabled" disabled="" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-disabled ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-disabled ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-disabled="true" aria-label="Toggle, unticked, Toggle button group" class="button" disabled="" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-disabled ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-disabled ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-disabled="true" aria-label="Toggle, unticked, Toggle button group" class="button" disabled="" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-disabled ic-toggle-button-medium" id="2" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-disabled ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-disabled="true" aria-label="Toggle, unticked, Toggle button group" class="button" disabled="" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update disabled 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="2" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update full-width 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" class="ic-toggle-button-group-full-width" full-width="" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-full-width ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-full-width ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-full-width ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-full-width ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update full-width 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" full-width="false" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update loading 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" class="ic-toggle-button-group-loading" loading="" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-loading ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-loading ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-disabled="true" aria-label="Loading, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <div class="loading-container">
              <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
            </div>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-loading ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-loading ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-disabled="true" aria-label="Loading, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <div class="loading-container">
              <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
            </div>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update loading 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" loading="false" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update monochrome 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" class="ic-toggle-button-group-monochrome" monochrome="" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium ic-toggle-button-monochrome" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium ic-toggle-button-monochrome" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update monochrome 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" monochrome="false" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update size 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" role="group" select-type="single" size="small" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-small" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-small ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-small" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-small ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update size 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" role="group" select-type="single" size="large" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-large" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-large ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-large" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-large ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update variant 1`] = `
<ic-toggle-button-group aria-label="Toggle button group" role="group" select-type="single" tabindex="0" variant="icon">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-icon ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="icon">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-icon" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <ic-tooltip label="Toggle, unticked" placement="bottom" silent="" target="ic-button-with-tooltip-22">
            <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </ic-tooltip>
        </template>
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-icon ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="icon">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-icon" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <ic-tooltip label="Toggle, unticked" placement="bottom" silent="" target="ic-button-with-tooltip-24">
            <button aria-label="Toggle, unticked, Toggle button group" class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </ic-tooltip>
        </template>
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;

exports[`ic-toggle-button-group component snapshot tests should render and update variant 2`] = `
<ic-toggle-button-group aria-label="Toggle button group" role="group" select-type="single" tabindex="0" variant="default">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="0" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
  <ic-toggle-button class="expand-toggle-group-child ic-toggle-button-medium" id="1" label="Toggle" tabindex="-1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-pressed="false" class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <button aria-label="Toggle, unticked" class="button" part="button" tabindex="0" type="button">
            <slot></slot>
          </button>
        </template>
        Toggle
        <slot></slot>
      </ic-button>
    </template>
  </ic-toggle-button>
</ic-toggle-button-group>
`;
